--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Chandrasekar
+          <span class="text-primary">K</span>
         </h1>
         <div class="subheading mb-5">Chennai, India. 
           <a href="mailto:name@email.com">takeoffandroid@gmail.com</a>
