edited email id

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <span class="text-primary">K</span>
         </h1>
         <div class="subheading mb-5">Chennai, India. 
-          <a href="mailto:name@email.com">takeoffandroid@gmail.com</a>
+          <a href="takeoffandroid@gmail.com">takeoffandroid@gmail.com</a>
         </div>
         <p class="lead mb-5">I am a Android Techie geek with 6+ years of experience in programming, blogging and open source contributions. I have
         authored 15+ open sources and 20+ articles and spoken at chicago roboto 2018 Android conference.
