--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
         
         If you’d like to get in touch, feel free to say hello through any of the social links below.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/chandrasekar-kuppusamy-64696472/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/TakeoffAndroid">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/takeoffandroid">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://medium.com/@takeoffandroid">
+            <i class="fab fa-medium-m"></i>
           </a>
         </div>
       </div>
