--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
         
         If you’d like to get in touch, feel free to say hello through any of the social links below.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/chandrasekar-kuppusamy-64696472/">
+          <a href="https://www.linkedin.com/in/chandrasekar-kuppusamy-64696472/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/TakeoffAndroid">
+          <a href="https://github.com/TakeoffAndroid" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/takeoffandroid">
+          <a href="https://twitter.com/takeoffandroid" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://medium.com/@takeoffandroid">
+          <a href="https://medium.com/@takeoffandroid" target="_blank">
             <i class="fab fa-medium-m"></i>
           </a>
         </div>
