Added speaker deck

--- a/index.html
+++ b/index.html
@@ -100,7 +100,30 @@
           <div class="resume-content">
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
             <div class="subheading mb-3">Chicago Roboto, USA</div>
-            <p>First person to talk about Android studio templates creation, application and its usages.</p>
+            <p>Presented at Chicago Roboto, USA to talk about Android studio templates creation, application and its usages.</p>
+            <a href="Speaker Deck">https://speakerdeck.com/takeoffandroid</a>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">April 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Android Studio Templates for Kotlin</h3>
+            <div class="subheading mb-3">BlrKotlin, Bangalore, India</div>
+            <p>Presented at Blrkotlin to talk about kotlin support for  Android studio templates</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2018</span>
+          </div>
+        </div>
+
+       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
+            <div class="subheading mb-3">BlrDroid, Bangalore, India</div>
+            <p>Presented at Blrdroid, Bangalore to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018</span>
@@ -126,17 +149,6 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div> -->
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
           </div>
         </div> -->
 
