Added a href link for speaker deck

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
             <div class="subheading mb-3">Chicago Roboto, USA</div>
             <p>Presented at Chicago Roboto, USA to talk about Android studio templates creation, application and its usages.</p>
-            <a href="Speaker Deck">https://speakerdeck.com/takeoffandroid</a>
+            <a href="https://speakerdeck.com/TakeoffAndroid">Speaker Deck</a>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018</span>
