--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Android Studio Templates for Kotlin</h3>
             <div class="subheading mb-3">Blr Kotlin, Bangalore, India</div>
-            <p>Presented at Blrkotlin to talk about kotlin support for  Android studio templates</p>
+            <p>Presented at Blrkotlin, Bangalore to talk about kotlin support for Android studio templates</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2018</span>
@@ -126,34 +126,11 @@
             <p>Presented at Blrdroid, Bangalore to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">April 2018</span>
+            <span class="text-primary">March 2018</span>
           </div>
         </div>
-
-        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
-          </div>
-        </div> -->
 
       </div>
-
     </section>
 
     <hr class="m-0">
