updated flutter and template open source

--- a/index.html
+++ b/index.html
@@ -139,10 +139,19 @@
       <div class="w-100">
         <h2 class="mb-5">Open Source</h2>
 
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
+              <h3 class="mb-0">Flutter</h3>
+              <a href="https://github.com/TakeoffAndroid/FlutterExamples">Flutter Examples</a>
+            </div>
+          </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Github</h3>
-            <a href="https://github.com/TakeoffAndroid">https://github.com/TakeoffAndroid</a>
+            <h3 class="mb-0">Android Studio Templates</h3>
+            <a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a>
+            <a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a>
+            <a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a>
           </div>
         </div>
 
