added div for open source template

--- a/index.html
+++ b/index.html
@@ -149,9 +149,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Android Studio Templates</h3>
+            
+            <div>
             <a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a>
             <a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a>
             <a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a>
+            </div>
+          
           </div>
         </div>
 
