--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
           <div class="resume-content">
             <h3 class="mb-0">Android Studio Templates</h3>
             
-            <div>
-            <a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a>
-            <a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a>
-            <a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a>
-            </div>
+            <ul style="list-style-type:none;">
+              <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a></li>
+            </ul>
           
           </div>
         </div>
