Removes ul tag extra space

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
             <h3 class="mb-0">Android Studio Templates</h3>
             
           <div>  
-            <ul style="list-style-type:none;">
+            <ul style="list-style-type:none;padding: 0;" >
               <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a></li>
               <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a></li>
               <li><a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a></li>
             </ul>
           </div>
-          
+
           </div>
         </div>
 
