updated github open source

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <h3 class="mb-0">Android Studio Templates</h3>
           <div>  
             <ul style="list-style-type:none;padding: 0;" >
-              <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">RecyclerView Template</a></li>
-              <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">MaterialTabs Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">Recyclerview Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">Material Tabs Template</a></li>
               <li><a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a></li>
             </ul>
           </div>
@@ -165,21 +165,21 @@
               <h3 class="mb-0">Android</h3>
               <div>
                 <ul style="list-style-type:none;padding: 0;">
-                  <li><a href="https://github.com/TakeoffAndroid/AppIntroAnimation">AppIntroAnimation</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogSearchView">Material DialogSearchView</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogBottomSheet">Material DialogBottomSheet</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/URLLinkView">URL LinkView</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/SeatBookingRecyclerView">Seat Booking RecyclerView</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/AppIntroAnimation">App Intro Animation</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogSearchView">Material Dialog Searchview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogBottomSheet">Material Dialog Bottomsheet</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/URLLinkView">URL Linkview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/SeatBookingRecyclerView">Seat Booking Recyclerview</a></li>
                   <li><a href="https://github.com/TakeoffAndroid/VideoChatHeads">Video ChatHeads</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialPagerRecyclerGridView">Material PagerRecyclerGridView</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/IconColorChanger">IconColorChanger</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialPercentDrawer">Material PercentDrawer</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialPagerRecyclerGridView">Material Pager Recycler Gridview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/IconColorChanger">Icon Color Changer</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialPercentDrawer">Material Percent Drawer</a></li>
                   <li><a href="https://github.com/TakeoffAndroid/CustomSnackBar">Custom SnackBar</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialCircleProgressBar">Material CircleProgressBar</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MultiSelectRecyclerGalleryGridView">MultiSelect Recycler GalleryGridView</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialCircleProgressBar">Material Circle Progressbar</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MultiSelectRecyclerGalleryGridView">MultiSelect Recycler Gallery Gridview</a></li>
                   <li><a href="https://github.com/TakeoffAndroid/SpannableTextview">Spannable Textview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/ShimmerContactsView">Shimmer ContactsView</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/HeaderFooterRecyclerView">Header Footer RecyclerView</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/ShimmerContactsView">Shimmer Contactsview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/HeaderFooterRecyclerView">Header Footer Recyclerview</a></li>
                 </ul>
               </div>
           
