add new page support  for github

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
             <div class="subheading mb-3">Chicago Roboto, USA</div>
-            <a href="https://speakerdeck.com/TakeoffAndroid">https://speakerdeck.com/TakeoffAndroid</a>
+            <a href="https://speakerdeck.com/TakeoffAndroid" target="_blank">https://speakerdeck.com/TakeoffAndroid</a>
             <p>Presented at Chicago Roboto, USA to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
@@ -142,7 +142,7 @@
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
               <h3 class="mb-0">Flutter</h3>
-              <a href="https://github.com/TakeoffAndroid/FlutterExamples">Flutter Examples</a>
+              <a href="https://github.com/TakeoffAndroid/FlutterExamples" target="_blank">Flutter Examples</a>
             </div>
           </div>
 
@@ -151,9 +151,9 @@
             <h3 class="mb-0">Android Studio Templates</h3>
           <div>  
             <ul style="list-style-type:none;padding: 0;" >
-              <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate">Recyclerview Template</a></li>
-              <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate">Material Tabs Template</a></li>
-              <li><a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate">Login Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/RecyclerViewTemplate" target="_blank">Recyclerview Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/MaterialTabsTemplate" target="_blank">Material Tabs Template</a></li>
+              <li><a href="https://github.com/TakeoffAndroid/LoginAndroidStudioTemplate" target="_blank">Login Template</a></li>
             </ul>
           </div>
         
@@ -165,21 +165,21 @@
               <h3 class="mb-0">Android</h3>
               <div>
                 <ul style="list-style-type:none;padding: 0;">
-                  <li><a href="https://github.com/TakeoffAndroid/AppIntroAnimation">App Intro Animation</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogSearchView">Material Dialog Searchview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogBottomSheet">Material Dialog Bottomsheet</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/URLLinkView">URL Linkview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/SeatBookingRecyclerView">Seat Booking Recyclerview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/VideoChatHeads">Video ChatHeads</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialPagerRecyclerGridView">Material Pager Recycler Gridview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/IconColorChanger">Icon Color Changer</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialPercentDrawer">Material Percent Drawer</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/CustomSnackBar">Custom SnackBar</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MaterialCircleProgressBar">Material Circle Progressbar</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/MultiSelectRecyclerGalleryGridView">MultiSelect Recycler Gallery Gridview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/SpannableTextview">Spannable Textview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/ShimmerContactsView">Shimmer Contactsview</a></li>
-                  <li><a href="https://github.com/TakeoffAndroid/HeaderFooterRecyclerView">Header Footer Recyclerview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/AppIntroAnimation" target="_blank">App Intro Animation</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogSearchView" target="_blank">Material Dialog Searchview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialDialogBottomSheet" target="_blank">Material Dialog Bottomsheet</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/URLLinkView" target="_blank">URL Linkview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/SeatBookingRecyclerView" target="_blank">Seat Booking Recyclerview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/VideoChatHeads" target="_blank">Video ChatHeads</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialPagerRecyclerGridView" target="_blank">Material Pager Recycler Gridview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/IconColorChanger" target="_blank">Icon Color Changer</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialPercentDrawer" target="_blank">Material Percent Drawer</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/CustomSnackBar" target="_blank">Custom SnackBar</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MaterialCircleProgressBar" target="_blank">Material Circle Progressbar</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/MultiSelectRecyclerGalleryGridView" target="_blank">MultiSelect Recycler Gallery gridview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/SpannableTextview" target="_blank">Spannable Textview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/ShimmerContactsView" target="_blank">Shimmer Contactsview</a></li>
+                  <li><a href="https://github.com/TakeoffAndroid/HeaderFooterRecyclerView" target="_blank">Header Footer Recyclerview</a></li>
                 </ul>
               </div>
           
