updated awards lists

--- a/index.html
+++ b/index.html
@@ -259,13 +259,20 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Certified Developer</li>
+            Google Certified Developer
+          </li>
+          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Got seed contributions and tip for my open sources</li>
+            Got seed contributions and tip for my open sources
+          </li>
+          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            First person to propose and present a topic on Android studio templates.</li>
+            First person to propose and present a topic on Android studio templates
+          </li>
+          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Expertise in Android, iOS, Flutter and React development</li>
+            Expertise in Android, iOS, Flutter and React development
+          </li>
         </ul>
       </div>
     </section>
