update funds seed

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Got seed contributions and tip for my open sources
+            Got a seed contributions and funding for my open sources
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
