customized speaking session

--- a/index.html
+++ b/index.html
@@ -96,37 +96,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
-            <div class="subheading mb-3">Chicago Roboto, USA</div>
+            <div class="subheading mb-3">Chicago Roboto (Chicago, USA), Blr Droid and Blr Kotlin (Bangalore, India) </div>
             <a href="https://speakerdeck.com/TakeoffAndroid" target="_blank">https://speakerdeck.com/TakeoffAndroid</a>
-            <p>Presented at Chicago Roboto, USA to talk about Android studio templates creation, application and its usages.</p>
+            <p>Presented at Android conference to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Android Studio Templates for Kotlin</h3>
-            <div class="subheading mb-3">Blr Kotlin, Bangalore, India</div>
-            <p>Presented at Blrkotlin, bangalore to talk about kotlin support for Android studio templates</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2018</span>
-          </div>
-        </div>
-
-       <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
-            <div class="subheading mb-3">Blr Droid, Bangalore, India</div>
-            <p>Presented at Blrdroid, bangalore to talk about Android studio templates creation, application and its usages.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">March 2018</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
