--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
-            <div class="subheading mb-3">Chicago Roboto (Chicago, USA), Blr Droid and Blr Kotlin (Bangalore, India) </div>
+            <div class="subheading mb-3">Chicago Roboto (Chicago, USA) </div>
             <a href="https://speakerdeck.com/TakeoffAndroid" target="_blank">https://speakerdeck.com/TakeoffAndroid</a>
-            <p>Presented at Android conference to talk about Android studio templates creation, application and its usages.</p>
+            <p>Presented at International Android conference to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">April 2018</span>
