speaking link as list

--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
           <div class="resume-content">
             <h3 class="mb-0">Mastering Android Studio Template Creation</h3>
             <div class="subheading mb-3">Chicago Roboto (Chicago, USA) </div>
-            <a href="https://speakerdeck.com/TakeoffAndroid" target="_blank">Speaker Deck</a>
-            <a href="https://www.youtube.com/watch?v=abbXZ20OPRI&index=14&list=PLnD_TKDSaFyXuapaScA3Q616AXvsnlq09&t=0s" target="_blank">Youtube Link</a>
-            
+            <ul>
+               <li><a href="https://speakerdeck.com/TakeoffAndroid" target="_blank">Speaker Deck</a></li>
+               <li><a href="https://www.youtube.com/watch?v=abbXZ20OPRI&index=14&list=PLnD_TKDSaFyXuapaScA3Q616AXvsnlq09&t=0s" target="_blank">Youtube
+                Link</a></li>
+            </ul>
+           
             <p>Presented at International Android conference to talk about Android studio templates creation, application and its usages.</p>
           </div>
           <div class="resume-date text-md-right">
